[package]
name = "moneymarket-overseer"
version = "0.0.1"
authors = ["smithmonnnnnnn@gmail.com"]
edition = "2018"
description = "A MoneyMarket custody contract - handles over loan management"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
moneymarket = { path = "../../packages/moneymarket", default-features = false, version = "0.3.1"}
cosmwasm-bignumber =  { path = "../../packages/bignumber", version = "3.0.0"}
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.37"
cw20 = "0.16.0"
astroport =  { path = "../../packages/astroport", version = "2.0.0"}

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw20 = "0.16.0"
cw20-base = { version = "0.16.0", features = ["library"] }
moneymarket-market = { path = "../market" }
moneymarket-overseer = { path = "../overseer" }
moneymarket-oracle = { path = "../oracle" }
moneymarket-interest-model = { path = "../interest_model" }
moneymarket-distribution-model = { path = "../distribution_model" }
astroport =  { path = "../../packages/astroport", version = "2.0.0"}

[profile.dev]
overflow-checks = true
